Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14361 closed bug (fixed)

"Disable user add-ons" and "Safe mode" do not stop libraries being loaded from non-packaged

Reported by: waddlesplash Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: System/runtime_loader Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

As in title. A legacy .pkg that I installed added a "libbsd.so" to my user non-packaged directory, which made the system unbootable as launch_daemon needs libnetwork, which needs libbsd. Turning these flags on in the bootloader did nothing.

Change History (4)

comment:1 by waddlesplash, 6 years ago

Did the kernel part of this in hrev52958.

comment:2 by waddlesplash, 6 years ago

https://review.haiku-os.org/c/haiku/+/1452 will fix the last part of this.

comment:3 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev53149.

comment:4 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.