kernel: Don't load modules from non-packaged under "disable user add-ons".

This matches the behavior of the "new-style" module system.
Part of #14361.